# reproschema-py

./: .autorc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  codespell_ignore_words.txt  index.html  mkdocs.yml  pyproject.toml  run_reproschema.sh  search.html  setup.cfg  setup.py
.github/workflows/: deploy_mkdocs.yml  package.yml  publish.yml  pythonpackage.yml  pythonpublish.yml  release.yml  update_context.yml
.serena/: project.yml
about/: index.html
docs/: CNAME  about.md  cli_usage.md  index.md  installation.md  output2redcap.md
docs/source/: architecture.md  conf.py  index.rst  modules.rst  reproschema.models.rst  reproschema.rst
docs/user_guide/: index.md  loris2reproschema.md  redcap2reproschema.md
installation/: index.html
internal/: CLAUDE.md  CLAUDE.md.backup
reproschema/: __init__.py  _version.py  cli.py  context_url.py  convertutils.py  jsonldutils.py  loris2reproschema.py  mappings.py  migrate.py  model.py  nbdc2reproschema.py  nbdc_mappings.py  pdf2reproschema.py  redcap2reproschema.py  redcap_mappings.py  reproschema2fhir.py  reproschema2redcap.py  reproschemaui2redcap.py  subset_items.py  to_reproschema.py  utils.py  validate.py
reproschema-py-tutorial/: mkdocs.yml
reproschema-py-tutorial/docs/: index.md  redcap2reproschema.md  reproschema2fhir.md  reproschema2redcap.md
reproschema/example/loris/: hbcd-loris.yml
reproschema/example/nbdc/: abcd.yml  hbcd.yml
reproschema/example/redcap/redcap_output/: redcap.csv
reproschema/example/redcap/reproschema_ui_to_redcap_example/: activity_0.jsonld
reproschema/models/: README.md  __init__.py  activity.py  activity_new.py  base.py  base_new.py  item.py  model.py  protocol.py  protocol_new.py  reproschema  reproschema2redcap.py  reproschema_activity.py  reproschema_protocol.py  reproschema_schema.py  response_options.py  ui.py  utils.py
reproschema/models/tests/: .gitignore  README.md  test_activity.py  test_item.py  test_new_protocol.py  test_new_schema.py  test_protocol.py  test_response_options.py  test_schema.py  test_ui.py  utils.py
reproschema/models/tests/data/items/: date.jsonld  (+19 more)
reproschema/models/tests/items/: country  date  default  email  float  integer  language  multitext  participant_id  radio  select  slider  state  text  time_range  year
reproschema/models/tests/protocols/: default_schema  protocol1
reproschema/tests/: reproschema-shacl.ttl  test_convert.py  test_field_property.py  test_loris2reproschema.py  test_nbdc2reproschema.py  test_output2redcap.py  test_process_choices.py  test_process_csv.py  test_redcap2reproschema.py  test_reproschema2fhir.py  test_reproschema2redcap.py  test_reproschemaui2redcap.py  test_rp2redcap_redcap2rp.py  test_rs2redcap_redcap2rs.py  test_validate.py
reproschema/tests/data/: README.md
reproschema/tests/data/activities/: activity1.jsonld  activity1_embed.jsonld
reproschema/tests/data/protocols/: protocol1.jsonld  protocol1_embed.jsonld
reproschema/tests/data_test_nimh-minimal/: test_nimh-minimal.yaml
reproschema/tests/test_data/: redcap2rs.yaml  redcap_dict.csv
reproschema/tests/test_output2redcap/: activity_0.jsonld
reproschema/tests/test_redcap2rs_data/: redcap2rs.yaml  redcap_hbn_sample.csv
reproschema/tests/test_reproschema_ui_to_redcap/: activity_0.jsonld
reproschema/tests/validation/: ActivityShape.ttl  FieldShape.ttl  ResponseOptionShape.ttl  ResponseOptionsShape.ttl
search/: search_index.json
templates/: redcap2rs.yaml
test_redcap2rs/activities/autism_parenting_stress_index_apsi/: autism_parenting_stress_index_apsi_schema
test_redcap2rs/activities/cognitive_and_affective_mindfulness_scalerevised_c/: cognitive_and_affective_mindfulness_scalerevised_c_schema
test_redcap2rs/test_redcap2rs/: test_redcap2rs_schema
user_guide/: index.html
user_guide/cli_usage/: index.html
user_guide/loris2reproschema/: index.html
user_guide/output2redcap/: index.html
user_guide/redcap2reproschema/: index.html
user_guide/reproschema2fhir/: index.html
user_guide/reproschema2redcap/: index.html
(+72 files in other folders)
