[metadata]
url = https://github.com/ReproNim/reproschema-py
author = Repronim developers
author_email = info@repronim.org
maintainer = Repronim developers
maintainer_email = info@repronim.org
description = Reproschema Python library
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, 2.0
provides =
    reproschema
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.7
install_requires =
    click
    etelemetry
    pyshacl
    PyLD
    requests
    requests_cache
    attrs >=22.0.0

test_requires =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
packages = find:

[options.package_data]
reproschema =
    tests/contexts/*
    tests/data/**/*.jsonld
    tests/*.ttl

[options.extras_require]
doc =
    packaging
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
    sphinxcontrib-mermaid
    myst-parser
docs =
    %(doc)s
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
    mypy
all =
    %(doc)s
    %(dev)s

[options.entry_points]
console_scripts =
    reproschema=reproschema.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = reproschema/_version.py
versionfile_build = reproschema/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
doctests = True
exclude =
    **/__init__.py
    **/tests/*
    *build/
    docs/sphinxext/
    docs/tools/
    reproschema/_version.py
max-line-length=99
